crates/biome_cli/tests/snapshots/main_cases_handle_markdown_files/format_stdin_markdown_successfully.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
# Input messages

```block
##  Heading with extra spaces

Some text.

```

# Emitted Messages

```block
## Heading with extra spaces

Some text.

```
