crates/biome_cli/tests/snapshots/main_cases_handle_markdown_files/should_format_empty_markdown_file.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `empty.md`

```md

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
