crates/biome_cli/tests/snapshots/main_cases_handle_markdown_files/should_format_markdown_file.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `test.md`

```md
##  Heading with extra spaces

Some text.

```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
test.md format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - ##··Heading·with·extra·spaces
      1 │ + ##·Heading·with·extra·spaces
    2 2 │   
    3 3 │   Some text.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
