crates/biome_cli/tests/snapshots/main_cases_handle_markdown_files/should_format_markdown_with_disabled_formatter.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "markdown": {
    "formatter": {
      "enabled": false
    }
  }
}
```

## `test.md`

```md
***

```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your biome.json or biome.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  - test.md
  


```

# Emitted Messages

```block
Checked 0 files in <TIME>. No fixes applied.
```
