crates/biome_cli/tests/snapshots/main_cases_handle_markdown_files/should_format_write_markdown_file.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `test.md`

```md
# Heading

---

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
