crates/biome_cli/tests/snapshots/main_cases_handle_markdown_files/should_handle_markdown_with_crlf.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `crlf.md`

```md
# Heading

Some text.

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
