crates/biome_cli/tests/snapshots/main_cases_handle_markdown_files/should_lint_markdown_with_config.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "linter": {
    "rules": {
      "style": {
        "noMultipleSpaceAtxHeading": "error"
      }
    }
  }
}
```

## `test.md`

```md
# Title

Some text.

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
