crates/biome_cli/tests/snapshots/main_cases_handle_markdown_files/should_lint_multiple_markdown_files.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `one.md`

```md
# First

Content.

```

## `two.md`

```md
# Second

More content.

```

# Emitted Messages

```block
Checked 2 files in <TIME>. No fixes applied.
```
